src/dts/tests/import_commonjs/import_commonjs.exp
Error: import_commonjs.js:3
  3: var x : string = (new P.C()).y;
                      ^^^^^^^^^^^^^ number. This type is incompatible with
  3: var x : string = (new P.C()).y;
             ^^^^^^ string

Error: import_commonjs.js:5
  5: var z: number = M.m;
                     ^^^ C. This type is incompatible with
  5: var z: number = M.m;
            ^^^^^^ number


Found 2 errors
